objects/noduplicates__Test_Obj1__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>noduplicates__Encrypted__c</fullName>
        <label>Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>noduplicates__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>noduplicates__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Number__c</fullName>
        <label>Number</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>noduplicates__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>noduplicates__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__TextAreaRich__c</fullName>
        <label>TextAreaRich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>noduplicates__Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>noduplicates__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>noduplicates__Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Obj1</label>
    <listViews>
        <fullName>noduplicates__All</fullName>
        <columns>NAME</columns>
        <columns>noduplicates__First_Name__c</columns>
        <columns>noduplicates__Last_Name__c</columns>
        <columns>noduplicates__Company__c</columns>
        <columns>noduplicates__Phone__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>noduplicates__Street__c</columns>
        <columns>noduplicates__TextAreaRich__c</columns>
        <columns>noduplicates__Zip__c</columns>
        <columns>noduplicates__URL__c</columns>
        <columns>noduplicates__Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>noduplicates__Checkbox__c</columns>
        <columns>noduplicates__Encrypted__c</columns>
        <columns>noduplicates__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2021 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T1-{000000}</displayFormat>
        <label>Test Obj1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Obj1</pluralLabel>
    <recordTypes>
        <fullName>noduplicates__First</fullName>
        <active>true</active>
        <label>First</label>
    </recordTypes>
    <recordTypes>
        <fullName>noduplicates__Second</fullName>
        <active>true</active>
        <label>Second</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>